fix(repair): record DAG timing and unknown token usage